--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,90 @@
-fake_headers>=1.0.2
-pandas>=2.0.3
-python-dotenv>=1.0.0
-selenium>=4.12.0
-webdriver_manager>=4.0.0
-langchain>=0.0.142
-langgraph>=0.0.1
-openai>=0.27.0
-wikipedia>=1.4.0
-langchain-openai>=0.3.7
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+beautifulsoup4==4.13.3
+bitarray==3.3.1
+bs4==0.0.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+ckzg==2.1.1
+cytoolz==1.0.1
+distro==1.9.0
+eth-account==0.13.7
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.7.0
+eth-rlp==2.2.0
+eth-typing==5.2.1
+eth-utils==5.3.0
+eth_abi==5.2.0
+fake-headers==1.0.2
+frozenlist==1.6.0
+h11==0.14.0
+hexbytes==1.3.0
+html5lib==1.1
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jiter==0.8.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.20
+langchain-core==0.3.41
+langchain-openai==0.3.7
+langchain-text-splitters==0.3.6
+langgraph==0.3.5
+langgraph-checkpoint==2.0.16
+langgraph-prebuilt==0.1.2
+langgraph-sdk==0.1.53
+langsmith==0.3.11
+msgpack==1.1.0
+multidict==6.4.3
+numpy==2.2.3
+openai==1.65.4
+orjson==3.10.15
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+parsimonious==0.10.0
+propcache==0.3.1
+pycryptodome==3.22.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+pyunormalize==16.0.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rlp==4.1.0
+selenium==4.29.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.38
+tenacity==9.0.0
+tiktoken==0.9.0
+toolz==1.0.0
+tqdm==4.67.1
+trio==0.29.0
+trio-websocket==0.12.2
+types-requests==2.32.0.20250328
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+web3==7.10.0
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wikipedia==1.4.0
+wsproto==1.2.0
+yarl==1.20.0
+zstandard==0.23.0
